Crash in [@ shutdownhang | NtUserGetMessage | NtUserGetMessage | NtUserGetMessage | WaitForCompletionMessage | PrintUIDocumentPropertiesWrap]
Categories
(Core :: Printing: Output, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | fixed |
| firefox70 | --- | fixed |
People
(Reporter: philipp, Assigned: bobowen)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-179cdb69-13a2-44ae-963b-238350190714.
Top 10 frames of crashing thread:
0 user32.dll NtUserGetMessage
1 user32.dll NtUserGetMessage
2 user32.dll NtUserGetMessage
3 winspool.drv WaitForCompletionMessage
4 winspool.drv PrintUIDocumentPropertiesWrap
5 printui.dll DocumentPropertiesWrapWOW64
6 comdlg32.dll _alloca_probe
7 comdlg32.dll CPrintDialog::CreateHookDialog
8 user32.dll InternalCallWinProc
9 user32.dll UserCallDlgProcCheckWow
this printing related shutdownhang signature is newly showing up in firefox 69 from users of 32bit versions of firefox on windows 7. i'm not sure if the crash stack provides much useful information to go on to look into a fix though...
Comment 1•7 years ago
|
||
I guess that this is most likely related to bug 1552785 - specifically to a93db5ac1278, which touched NativeShowPrintDialog.
| Assignee | ||
Comment 2•7 years ago
|
||
My guess is this might be similar to bug 1152353, which was due to the weird way the old (Windows 7 and before) print dialog code waits for specific windows messages while spinning the event loop (which can obviously remove those messages).
I imagine that because we're going through different code paths now, it might be waiting for a different message.
If we can debug this and find out what it is, we should be able to add it (or them) to the list and if statement in [1].
[1] https://hg.mozilla.org/mozilla-central/rev/471695817852#l1.15
Comment 3•6 years ago
|
||
The priority flag is not set for this bug.
:jwatt, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 4•6 years ago
|
||
I've had to replace my Windows machine, and the new one won't arrive for at least two weeks. Is there any chance you might be able to fit in taking a look at this, given I assume we want to uplift it and sooner would be better?
Updated•6 years ago
|
| Assignee | ||
Comment 5•6 years ago
|
||
(In reply to Jonathan Watt [:jwatt] from comment #4)
I've had to replace my Windows machine, and the new one won't arrive for at least two weeks. Is there any chance you might be able to fit in taking a look at this, given I assume we want to uplift it and sooner would be better?
Yes, I'll see if I can get it to reproduce using similar techniques to the other bug I mentioned.
I've still got an older Windows 7 machine at the moment, although it should work on a VM as well.
| Assignee | ||
Comment 6•6 years ago
|
||
I've managed to produce something similar I think.
It looks like I need to add in the message 5b80.
I also noticed some other WaitForCompletionMessage crashes which look like they are waiting for 5b81.
| Assignee | ||
Comment 7•6 years ago
|
||
These are now being hit because of the removal of the HTML frames
customizations to the print dialog.
I've removed the defines for these, because I don't think there is any point
trying to guess what their uses are.
I've also made it 32-bit only, because we only see them on 32-bit Windows 7.
In fact only 32-bit Firefox on 64-bit Windows 7 I believe.
Comment 9•6 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 10•6 years ago
|
||
Comment on attachment 9082639 [details]
Bug 1565932: Add more Printer dialog completion messages to be reposted on x86 Windows. r=jmathies!
Beta/Release Uplift Approval Request
- User impact if declined: Print dialog issues and shutdown hangs/crashes will continue.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce: I'm saying no to manual QE because I don't have good STR.
I have managed to reproduce a number of times in Beta by causing multiple copies of the "Cannot print this document yet, it is still being loaded." dialog to appear, waiting for the Print dialog and then closing the dialogs in various ways.
I haven't managed to reproduce on the current Nightly. - List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This just adds new messages from crashes in Beta to the list we already repost.
It has been changed to x86 only, but we only see the crash on x86. - String changes made/needed: None
Comment 11•6 years ago
|
||
Comment on attachment 9082639 [details]
Bug 1565932: Add more Printer dialog completion messages to be reposted on x86 Windows. r=jmathies!
Crash fix while printing on Windows 7, approved for 69 beta 12, thanks!
Comment 12•6 years ago
|
||
| bugherder uplift | ||
Description
•