Bug 1565932: Add more Printer dialog completion messages to be reposted on x86 Windows. r=jmathies a=pascalc

These are now being hit because of the removal of the HTML frames
customizations to the print dialog.
I've removed the defines for these, because I don't think there is any point
trying to guess what their uses are.
I've also made it 32-bit only, because we only see them on 32-bit Windows 7.
In fact only 32-bit Firefox on 64-bit Windows 7 I believe.

Differential Revision: https://phabricator.services.mozilla.com/D40433

--HG--
extra : source : ae52fde4d1ca4cdbfcb2a7de85ac8639ac1d1e03